New version of the paper with case-study and correction
Things added:
 - Case study. Still need to plot the final results using brainR
 - Table of Bioconductor vs Brainconductor. Couldn't think of many
   positive things Brainconductor has over Bioconductor, so I put
   this table in the appendix...
 - Corrections mentioned by Haixiao. These include doing a broader
   scope of the paper (not only about connectome or time series). I
   can improve more on this.
 - Added a comment about pass by reference vs pass by value.

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1,3 +1,96 @@
+@book{barber2011bayesian,
+  title={Bayesian time series models},
+  author={Barber, David and Cemgil, A Taylan and Chiappa, Silvia},
+  year={2011},
+  publisher={Cambridge University Press}
+}
+
+@article{bai2003computation,
+  title={Computation and analysis of multiple structural change models},
+  author={Bai, Jushan and Perron, Pierre},
+  journal={Journal of applied econometrics},
+  volume={18},
+  number={1},
+  pages={1--22},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{han2013sparse,
+  title={Sparse median graphs estimation in a high dimensional semiparametric model},
+  author={Han, Fang and Liu, Han and Caffo, Brian},
+  journal={arXiv preprint arXiv:1310.3223},
+  year={2013}
+}
+
+@misc{rorden2011mricro,
+  title={MRIcro Software Guide},
+  author={Rorden, C},
+  year={2011},
+  publisher={Version}
+}
+
+@inproceedings{bengtsson2003r,
+  title={The R. oo package-object-oriented programming with references using standard R code},
+  author={Bengtsson, Henrik},
+  booktitle={Proceedings of the 3rd International Workshop on Distributed Statistical Computing (DSC 2003), March},
+  pages={20--22},
+  year={2003}
+}
+
+@article{fryzlewicz2016tail,
+  title={Tail-greedy bottom-up data decompositions and fast multiple change-point detection},
+  author={Piotr Fryzlewicz},
+  year={2016}
+}
+
+@article{chan2014group,
+  title={Group lasso for structural break time series},
+  author={Chan, Ngai Hang and Yau, Chun Yip and Zhang, Rong-Mao},
+  journal={Journal of the American Statistical Association},
+  volume={109},
+  number={506},
+  pages={590--599},
+  year={2014},
+  publisher={Taylor \& Francis}
+}
+
+@article{alaya2015learning,
+  title={Learning the intensity of time events with change-points},
+  author={Alaya, Mokhtar Z and Ga{\"\i}ffas, St{\'e}phane and Guilloux, Agathe},
+  journal={Information Theory, IEEE Transactions on},
+  volume={61},
+  number={9},
+  pages={5148--5171},
+  year={2015},
+  publisher={IEEE}
+}
+
+@article{hofling2010coordinate,
+  title={A coordinate-wise optimization algorithm for the Fused Lasso},
+  author={H{\"o}fling, Holger and Binder, Harald and Schumacher, Martin},
+  journal={arXiv preprint arXiv:1011.6409},
+  year={2010}
+}
+
+@article{viallon2016robustness,
+  title={On the robustness of the generalized fused lasso to prior specifications},
+  author={Viallon, Vivian and Lambert-Lacroix, Sophie and Hoefling, H{\"o}lger and Picard, Franck},
+  journal={Statistics and Computing},
+  volume={26},
+  number={1-2},
+  pages={285--301},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{dalalyan2014prediction,
+  title={On the prediction performance of the Lasso},
+  author={Dalalyan, Arnak S and Hebiri, Mohamed and Lederer, Johannes},
+  journal={arXiv preprint arXiv:1402.1700},
+  year={2014}
+}
+
 @article{buckner2010gputools,
   title={The gputools package enables GPU computing in R},
   author={Buckner, Joshua and Wilson, Justin and Seligman, Mark and Athey, Brian and Watson, Stanley and Meng, Fan},
