--- a/paper/2016-01-05-BrainConductor.tex
+++ b/paper/2016-01-05-BrainConductor.tex
@@ -23,7 +23,7 @@
 %\usepackage{booktabs}
 %\usepackage{array}
 %\usepackage{fullpage}
-%\usepackage{url}
+\usepackage{url}
 %\usepackage{algorithm}
 %\usepackage{algorithmic}
 %\usepackage{bm}
@@ -180,11 +180,12 @@ the other hand, statisticians bring new statistical methods
 designed to address the high-dimensional, large-scale and complex
 data. Such techniques can be divided broadly into
 two categories:
-summarizing the data (i.e., estimating the brain connectivity, represent
-a parcellation of voxels' time series with a single time series)
+feature extraction (i.e., estimating the connectome, representing
+a parcellation of voxels' time series with a single time series,
+identifying relevant biomakers associated with a connectome signature)
 and uncertainty assessment (i.e., testing for significant difference
-between the connectomes of two populations, determining if the
-connectivity between two region of interests is due to chance).
+between the connectomes of two populations, determining if 
+an extracted feature is due to chance).
 We strive to help enable ease of collaboration between these two communities.
 While the neuroscientist will benefit from the modern techniques to
 analyze these datasets, the statistician
@@ -206,6 +207,9 @@ take advantage of the mature statistical packages rather than re-implementing
 functionality. In future neuroimaging studies, an open-source platform is of
 necessity to produce collaborative creation of extensible computational tools
 and enhance the reproducibility of research results.
+
+
+
 
 This desire has already  %requirement
 inspired one of the most prominent projects, Neuroimaging
@@ -247,7 +251,7 @@ most statistical methods. These concerns are summarized in \Fref{fig:nitrc}.
 
 \begin{figure}[tb]
 \centering
-\includegraphics[width=400pt]{fig/brainconductor/brainconductor_nitrc_chart.png}
+\includegraphics[width=400pt]{fig/brainconductor/brainconductor_nitrc_chart_v2.png}
 \caption{Drawbacks of NITRC framework, description of the drawbacks and proposed
 solution
 in BrainConductor. {\color{red}Need to fix alignment}}
@@ -256,17 +260,20 @@ in BrainConductor. {\color{red}Need to fix alignment}}
 
 
 The BrainConductor project serves two fundamental goals. In connectome-wide
-association studies, the goal is to relate differences the macro- and
+association studies, one fundamental goal is to relate differences the macro- and
 microarchitecture of the human connectome to phenotypic variation among
 individuals\cite{milham2012open}. Towards this end,
 in our
 initial release of BrainConductor, we focus on an open-neuroscience
 solution to manage resting-state fMRI data and study its
 subsequent brain connectivity patterns.
+However, there are many scientific goals to a field as broad as neuroscience.
 In imaging genetics, the ultimate goal
 for BrainConductor project is to identify biomarkers and help early diagnosis
-for a variety of neuropsychiatric disorders. This will involve a future
-integration of genomics and neuroimaging data.
+for a variety of neuropsychiatric disorders. This will involve an
+integration of genomics and neuroimaging data and expansion of BrainConductor
+in the future. Our work paves the foundation for this long-term community 
+project.
 
 
 \section{Merits of Computational Strategy}
@@ -351,9 +358,12 @@ in our Brainbase package as
 the general data structure to resolve these problems.
 At its core, the NIdata class is a generic file type split into
 four slots to store the following information: 1) phenotype
-information, 2) specifics of scan sessions, 3) the neuroimaging data
-and 4) text-based comments or notes associated with the data that
-investigators might document. While we provide an initial structure for storing
+information, 2) specifics of scan sessions, 3) the neuroimaging data,
+4) a ``wildcard" extra slot for any other information that user
+wants to store such as statistical results, 5) an optional subject ID,
+and 6) text-based comments or notes associated with the data that
+investigators might document. While the
+S4 class provides an initial structure for storing
 phenotype and scan information, users have the flexibility to disregard or
 modify these templates before reading the data into R.
 Our NIdata format ensures compatibility since most of the conversions from
@@ -363,6 +373,8 @@ to facilitate
 reading in the header information and high-dimensional data array from binary
 neuroimaging data files into NIdata class objects.
 
+{\color{red}FIGURE HERE ABOUT THE HIERARCHICAL DATA STRUCTURE}
+
 Most of the engineering of the NIdata class revolved around a more suitable
 representation of the neuroimaging data. Like in the CIFTI file
 format\cite{Glasser2013The},
@@ -370,12 +382,13 @@ we automatically convert all neuroimaging data (a 4D matrix)
 into a 2D (potentially sparse) matrix where each
 column represents a different voxel
 in the brain and each row represents
-a different sample from the time series. To ensure that the column indices are
+a different sample from the series (i.e., time series in fMRI, directional
+series in DTI). To ensure that the column indices are
 compatible across different NIdata objects, we define generic templates in the
 Brainbase packages that dictate which voxel position are assigned to which
 columns.
 These templates are associated with brain masks and the corresponding tissue
-priors.
+priors. 
 The NIdata class facilitates the processing
 and storage of neuroimaging data based on customizable
 templates.
@@ -386,6 +399,8 @@ indices associated with non-gray matter will be `zero'-ed out to save storage.
 Moreover, if users want to perform a
 region-of-interest or parcellation-based analysis, we provide
 additional functions to change the template and perform the data extraction.
+However, users are able to define their own templates via the reslicing functions
+we provide based on the fslr package. {\color{red}Not implemented}
 
 To ensure that our 2D representation of neuroimaging data retains the
 spatial information of each voxel, the Brainbase package provides
@@ -397,6 +412,16 @@ Thanks to this flexibility, software developers can
 implement algorithms operating directly on the 2D representation in
 NIdata without worrying about representation-conversion. {\color{red}Why is this
 called ``hierarchical''? I haven't really done anything hierarchical...}
+
+When designing our NIdata file format in R, we kept the tradition of using S4's
+pass-by-value system rather than using an pointer-based system to pass-by-reference.
+A pass-by-reference system would be beneficial as R would not need to 
+create local copies of massive neuroimaging data every time it is passed into a
+function. While there are R packages to help developers
+code using pointers\cite{bengtsson2003r}, there would be a 
+considerable burden on future developers to these new coding methods.
+Instead, we chose to keep the simplistic S4 system and design the hierarchical
+data structure to reduce the memory requirements for storing each NIdata object.
 
 {\color{red}Some concrete numbers of how much memory is saved}
 {\color{red}TODO: This code is half-way complete.}
@@ -427,18 +452,32 @@ storage and sharing across diverse centers, and became one of the most popular
 neuroimaging format recently.
 
 BrainConductor offers functions to read all these data format
-based on existing software in the oro.dicom and oro.nifti packages. We
+based on existing software in the oro.nifti package. We
 provide a generic function that handles all of these file types and read data
 into the desired NIdata object.
+We noticed that the oro.dicom package was difficult to use for new users, so
+we altered the implementation of how DICOM files are converted into NIfTI 
+files. An example of the conversion using oro.dicom compared to a conversion
+based on specialized in software such as MRIcron\cite{rorden2011mricro} is
+shown in \Fref{fig:dicom}.
 {\color{red} TODO: The conversion from DICOM to NIfTI is not well implemented.
 We based on mature
-software dcm2nii (from MRIcron?). The conversion results visualization compared
-to results of
-oro.nifti or fmri packages.}
+software dcm2nii (from MRIcron?).}
+
+\begin{figure}[tb]
+\centering
+\includegraphics[width=400pt]{fig/brainconductor/dicom.png}
+\caption{Comparison between conversion functions from oro.dicom package (left) and from our Brainbase  package (right).  Our function showed better compatibility  with widely-used visualization tools such as MRIcron.}
+\label{fig:dicom}
+\end{figure}
+
 
 {\color{red}TODO: This code is half-way complete. To use dcm2nii, users will
 need
 matlab installed and linked...}
+
+
+
 
 \subsection{Software Distribution.}
 
@@ -498,81 +537,6 @@ The list of neuroscience-related packages included in BrainConductor are listed
 in \Fref{tab:neuro}, while statistical-related packages are listed in
 \Fref{tab:stat}.
 
-\begin{table}
-\begin{footnotesize}
-\begin{center}
-    \begin{tabular}{ | l | p{4cm} |  p{6cm} |}
-    \hline
-	Package Name & Full Name & Description \\ \hline
-	AnalyzeFMRI & Functions for analysis of fMRI datasets % stored in the ANALYZE
-%or NIFTI format
-	&
-	Functions for I/O, visualisation and analysis of functional Magnetic Resonance
-Imaging (fMRI) datasets stored in the ANALYZE or NIFTI format.
-	\\\hline
-	brainR & Helper functions to misc3d and rgl packages for brain imaging &
-	Includes functions for creating 3D and 4D images using WebGL, RGL, and
-JavaScript Commands \\\hline
-	fmri & Analysis of fMRI experiments &
-	Provides R-functions to perform fmri analysis \\\hline
-	fslr & Wrapper Functions for FSL  from fMRI of the Brain &
-	Wrapper functions that interface with FSL using system commands. \\\hline
-	oro.dicom & DICOM Input / Output &
-	Data input/output functions for data in the DICOM standard \\\hline
-	oro.nifti & NIfTI + ANALYZE + AFNI Input / Output &
-	Functions for the input/output and visualization of data in the ANALYZE, NIfTI
-or AFNI formats. \\\hline
-	RNiftyReg & Image Registration Using the NiftyReg Library &
-	Provides an R interface to the NiftyReg image registration tools \\\hline
-	nat & NeuroAnatomy Toolbox for Analysis &
-	Enables analysis and visualisation of 3D biological image data, especially
-traced neurons \\\hline
-	nat.templatebrains & NeuroAnatomy Toolbox Extension for Handling Template
-Brains &
-	Extends package 'nat'  by providing objects and functions for handling template
-brains. \\
-	\hline
-    \end{tabular}
-    \caption{fMRI Packages Incorporated into the BrainConductor Project
-{\color{red}Why is the font different...}}
-    \label{tab:neuro}
-\end{center}
-\end{footnotesize}
-\end{table}
-
-\begin{table}
-\begin{footnotesize}
-\begin{center}
-    \begin{tabular}{ | l | p{4cm} |  p{6cm} |}
-    \hline
-	Package Name & Full Name & Description \\ \hline
-	bigdata & Big Data Analytics & Provides a LASSO regression using stability
-selection.
-	for large-scale data analysis \\\hline
-	fastclime & A Solver for Parameterized Linear Programming to Precision Matrix
-Estimation &
-	An efficient method of recovering precision matrices by applying the parametric
-simplex method is provided in this package.  \\\hline
-	flare & Family of Lasso Regression &
-	Provides the implementation of a family of Lasso variants including Dantzig
-Selector, LAD Lasso, SQRT Lasso, Lq Lasso for estimating high dimensional sparse
-linear model. \\\hline
-	huge & High-Dimensional Undirected Graph Estimation &
-	Provides a general framework for high-dimensional undirected graph
-estimation.\\\hline
-	picasso &  Pathwise Calibrated Sparse Shooting Algorithm & Implements the
-pathwise calibrated sparse shooting algorithm regularized sparse linear
-regression, sparse logistic regression, and sparse undirected graphical model
-estimation. \\\hline
-	smart & Sparse Multivariate Analysis via Rank Transformation & Provides a
-general framework for analyzing (including estimation, feature selection and
-prediction) and visualize big data. \\\hline
-    \end{tabular}
-   \caption{Statistical Packages Incorporated into the BrainConductor Project}
-   \label{tab:stat}
-\end{center}
-\end{footnotesize}
-\end{table}
 
 The base installation of BrainConductor also comes with standardized imaging
 resources
@@ -619,9 +583,7 @@ analysis into a population-level analysis. As mentioned in the prequel, users
 can
 store their fMRI data using NIdata classes where each NIdata object stores the
 data of
-subject's scan session. Due to the heterogeneity across each individual's brain
-and
-the time-series nature of imaging data,
+subject's scan session. Due to the heterogeneity across each individual's brain,
 neuroscientists cannot naively aggregate all the NIdata objects prior to
 performing their
 analysis.
@@ -653,7 +615,9 @@ new statistical ideas. A flowchart illustrating this process is shown in
 \begin{figure}[tb]
 \centering
 \includegraphics[width=400pt]{fig/brainconductor/brainconductor_alg_flowchart.png}
-\caption{The workflow using BrainConductor's interface. BCoRead (A1) reads the
+\caption{The workflow using BrainConductor's interface. Our illustration
+is about estimating the connectome from fMRI data, but functions within can be
+adapted to estimate any desired quantity. BCoRead (A1) reads the
 raw neuroimaging
 data and phenotype file into our NIdata objects. This
 converts the voxel-level data into the parcellation- or RoI-level
@@ -671,7 +635,7 @@ We note that our ``BCoPopulation.analysis'' can reverse the steps
 ``BCoPopulation.aggregate"
 and ``BCoPopulation.difference" to handle paired case-control studies.
 
-{\color{red}TODO: This code has not been developed yet.}
+{\color{red}TODO: This code has just begun being developed.}
 
 \subsection{Visualization.}
 Visualization plays a tremendously vital role in neuroimaging analysis.
@@ -687,9 +651,10 @@ In the spirit of popular visualization softwares such as AFNI and FSL, we have
 developed `BCoView', an interactive plotter based in R that allows users to
 scroll around and
 zoom-in, zoom-out of the neuroimage using keyboard commands. With other keyboard
-commands, users can also show the corresponding time-series where the current
+commands, users can also show the corresponding series where the current
 viewing
-cursor is. We expect this viewer to be a comparable alternative to `fslview' in
+cursor is. This is especially useful when viewing time-series data. 
+We expect this viewer to be a comparable alternative to `fslview' in
 the FSL
 software.
 
@@ -748,7 +713,7 @@ voxel-level
 analysis into a ROI-level or parcel-level analysis. This is a customizable
 function
 that can be used in conjugation when reading in the data which aggregates
-time-series
+the series
 in different voxels or eliminates voxels that are not relevant to the analysis.
 
 {\color{red}talk about graphical models}
@@ -761,15 +726,192 @@ A brief Conclusion at last.
 
 \section{Case Study}
 
-{\color{red}50 autism, 50 control from ABIDE. Use AAL parcellation to reduce to
-116-ROI graph
-for each subject. Use lasso to do neighborhood selection. Use the median graph
-to
-define the population graph. Output the difference in distance matrix. Should we
-include inference?? I don't have code for inference.}
+Autism spectrum disorders (ASD) are characterized by qualitative impairment in reciprocal social communication, as well as by repetitive, restricted, and stereotyped behaviors. Previously considered rare, ASD are now recognized to occur in more than 1\% of children, causing immense suffering to individuals and their families. 
+We provide a short demonstration of the functionalities of BrainConductor to
+estimate the differences in the connectome between autistic subject and controls based
+on the 57 resting-state fMRI (R-fMRI) scans (30 autistic subjects, 27 controls) from the Autism
+Brain Imaging Data Exchange (ABIDE) collected at the 
+University of Pittsburgh, School of Medicine\cite{di2014autism}. 
+The subjects are 7 to 35 years of age, where the autistic subjects were
+diagnosed with the Autism Diagnostic Interview-Revised and the Autism Diagnostic 
+Observation Schedule-General. The controls are selected to be healthy
+individuals to match the autistic subjects in age (within 3.5 years), IQ (within
+12 points on the full-scale) and gender.
+
+The 57 scans were preprocessed with the Configurable Pipeline for the Analysis
+of Connectomes (C-PAC) alpha version 0.3.9. This preprocessing 
+happened outside of R. The image preprocessing steps
+included slice-timing and motion correction based on the Friston Model, nuisance signal
+regression (including 5 CompCorr signals, the cerebrospinal fluid (CSF), motion
+ and the global, linear, and quadratic
+signals) and temporal filtering (0.001-0.08Hz). The derived R-fMRI measures
+were normalized to Montreal Neurological Institute (MNI152) stereostatic
+space (2mm$^3$ isotropic) with linear regressions and spatially smoothed
+(applied FWHM = 6mm). 
+
+After the data has been preprocessed, we use various tools developed in BCoViewer
+to visually explore the data. In \Fref{fig:features}, we see two different instances
+of our BCoViewer function to either interactively explore a subject's imaging data (both
+functional and anatomical simultaneously). On the right, BCoViewer plots the AAL parcellation
+on the MNI152 2mm brain template. But another question investigators typically have is 
+how to determine the success of their preprocessing pipeline. We developed another feature
+in BCoViewer to address this, shown in \Fref{fig:comparison} to mimic currently-used methods
+in C-PAC.
+
+
+\begin{figure}[tb]
+\centering
+\includegraphics[width=400pt]{fig/brainconductor/BCoViewer.png}
+\caption{(Left) An interactive imaging viewer in BCoViewer designed in R to mimic fslview. (Right) A parcellation plotter in BCoViewer.}
+\label{fig:features}
+\end{figure}
+
+\begin{figure}[tb]
+\centering
+\includegraphics[width=400pt]{fig/brainconductor/comparison.png}
+\caption{A comparison between our plotter in BCoViewer to visually determine how well
+a fMRI scan has been registered to the standard MNI template. Our BCoViewer method in R
+is shown on the left, while the method used in C-PAC is shown on the right. In 
+both plots, the subject's functional data is shown in grayscale while the red points/lines
+trace the outline of the MNI 2mm template.}
+\label{fig:overlap}
+\end{figure}
+
+In order to find the presence of abnormal functional connectivity, we 
+carried out the whole-brain analysis using the Automated Anatomical Labeling\cite{tzourio2002automated} parcellation. This divides the brain into
+116 anatomical connected regions. We extracted the mean time series from each
+of the 116 regions for each subject. We then performed a subject-level connectome
+analysis using neighborhood selection\cite{meinshausen2006high}. For
+each subject, we chose the tuning
+parameter of this method to estimate a connectome with 150 edges (roughly sparsity
+of 0.025\%). 
+Based on case-control pairings matching the age, gender and IQ as closely as possible,
+we then took the graph-difference between each pair of case and control. Here,
+the graph difference is represented as signed edges in one connectome but not the other. 
+We then computed the median graph\cite{han2013sparse} with 
+25 edges 
+to generate a population-level graph difference between the cases and controls.
+
+{\color{red}Use BrainR to demonstrate the connectivity difference}
+
+{\color{red}results and current literature results}
 
 \newpage
 \appendix
+
+\section{Related Tables}
+
+
+We do a comparison of the differences between BioConductor and BrainConductor
+in \Fref{tab:bioconductor}.
+
+\begin{table}
+\begin{footnotesize}
+\begin{center}
+    \begin{tabular}{ | p{2cm} | p{6.5cm} |  p{6.5cm} |}
+    \hline
+	Main Feature & \textbf{BioConductor} & \textbf{BrainConductor} \\ \hline
+	Data Structure Standards & ExpressionSet and SummarizedExperiment S4 classes based on gene data, and annotation (meta) data associated based on some common databases 
+	& NIdata S4 class based on imaging data and annotation (meta) data \\\hline
+	Annotation and Resources & Provides software (BioMart) for associating microarray and other genomic data in real time with biological metadata from web databases such as GenBank, Entrez genes and PubMed (annotate package) & 
+	Provides interface DICOM, ANALYZE and NIfTI formats currently, but many other formats exist we
+	might not be familiar with. We currently have only specific annotation files (tissue priors,
+	anatomical parcellation) mostly from the standard FSL installation. \\\hline
+	Website & \url{http://bioconductor.org} & \url{http://52.69.152.114/} 
+	\\\hline
+	Reproducible Research & Advocates using Knitr & Advocates using iPython \\\hline
+	Testing & Automated testing of submitted packages and daily testing of packages & Manual testing of submitted packages \\\hline
+	Short Courses & Developed a program of short courses on software and statistical methods for the analysis of genomic data. & Have no courses, but can make if the project is successfully popularized. \\\hline
+	Maintainers & Dedicated maintainers from all over the word & Only two maintainers \\\hline
+    \end{tabular}
+    \caption{Contrasts between BioConductor and BrainConductor}
+    \label{tab:bioconductor}
+\end{center}
+\end{footnotesize}
+\end{table}
+
+We list related packages that we have integrated into BrainConductor's 
+base installation. Currently, we have focused on estimate the connectome for
+fMRI data. In \Fref{tab:neuro}, we list various packages that interact with
+fMRI data. In \Fref{tab:stat}, we list various packages that estimate the connectome
+based on data.
+
+\begin{table}
+\begin{footnotesize}
+\begin{center}
+    \begin{tabular}{ | l | p{4cm} |  p{6cm} |}
+    \hline
+	Package Name & Full Name & Description \\ \hline
+	AnalyzeFMRI & Functions for analysis of fMRI datasets % stored in the ANALYZE
+%or NIFTI format
+	&
+	Functions for I/O, visualisation and analysis of functional Magnetic Resonance
+Imaging (fMRI) datasets stored in the ANALYZE or NIFTI format.
+	\\\hline
+	brainR & Helper functions to misc3d and rgl packages for brain imaging &
+	Includes functions for creating 3D and 4D images using WebGL, RGL, and
+JavaScript Commands \\\hline
+	fmri & Analysis of fMRI experiments &
+	Provides R-functions to perform fmri analysis \\\hline
+	fslr & Wrapper Functions for FSL  from fMRI of the Brain &
+	Wrapper functions that interface with FSL using system commands. \\\hline
+	oro.dicom & DICOM Input / Output &
+	Data input/output functions for data in the DICOM standard \\\hline
+	oro.nifti & NIfTI + ANALYZE + AFNI Input / Output &
+	Functions for the input/output and visualization of data in the ANALYZE, NIfTI
+or AFNI formats. \\\hline
+	RNiftyReg & Image Registration Using the NiftyReg Library &
+	Provides an R interface to the NiftyReg image registration tools \\\hline
+	nat & NeuroAnatomy Toolbox for Analysis &
+	Enables analysis and visualisation of 3D biological image data, especially
+traced neurons \\\hline
+	nat.templatebrains & NeuroAnatomy Toolbox Extension for Handling Template
+Brains &
+	Extends package 'nat'  by providing objects and functions for handling template
+brains. \\
+	\hline
+    \end{tabular}
+    \caption{fMRI Packages Incorporated into the BrainConductor Project
+{\color{red}Why is the font different...}}
+    \label{tab:neuro}
+\end{center}
+\end{footnotesize}
+\end{table}
+
+\begin{table}
+\begin{footnotesize}
+\begin{center}
+    \begin{tabular}{ | l | p{4cm} |  p{6cm} |}
+    \hline
+	Package Name & Full Name & Description \\ \hline
+	bigdata & Big Data Analytics & Provides a LASSO regression using stability
+selection.
+	for large-scale data analysis \\\hline
+	camel & Calibrated Machine Learning & Provides a family of high-dimensional calibrated machine learning tools \\\hline
+	fastclime & A Solver for Parameterized Linear Programming to Precision Matrix
+Estimation &
+	An efficient method of recovering precision matrices by applying the parametric
+simplex method is provided in this package.  \\\hline
+	flare & Family of Lasso Regression &
+	Provides the implementation of a family of Lasso variants including Dantzig
+Selector, LAD Lasso, SQRT Lasso, Lq Lasso for estimating high dimensional sparse
+linear model. \\\hline
+	huge & High-Dimensional Undirected Graph Estimation &
+	Provides a general framework for high-dimensional undirected graph
+estimation.\\\hline
+	picasso &  Pathwise Calibrated Sparse Shooting Algorithm & Implements the
+pathwise calibrated sparse shooting algorithm regularized sparse linear
+regression, sparse logistic regression, and sparse undirected graphical model
+estimation. \\\hline
+	smart & Sparse Multivariate Analysis via Rank Transformation & Provides a
+general framework for analyzing (including estimation, feature selection and
+prediction) and visualize big data. \\\hline
+    \end{tabular}
+   \caption{Statistical Packages Incorporated into the BrainConductor Project}
+   \label{tab:stat}
+\end{center}
+\end{footnotesize}
+\end{table}
 
 \begin{methods}
 \section{Using BrainConductor.}
@@ -835,7 +977,7 @@ The output provides possible solutions to identified problems, and the help page
 %% Use \item's to separate, default label is "Acknowledgements"
 
 \begin{addendum}
- \item Put acknowledgments here.
+ \item Put acknowledgements here.
  \item[Competing Interests] The authors declare that they have no
 competing financial interests.
  \item[Correspondence] Correspondence and requests for materials should be
